InsuranceOrg/force-app/main/default/objects/vlocity_ins__AssetTransaction__c/vlocity_ins__AssetTransaction__c.object-meta.xml
<CustomObject>
    <description>Represents transactions pertaining to an insurance policy or other held product such as member enrollment or financial account. These transactions typically track changes to a policy that effects the premium such as an endorsement, renewal or cancelllation. Master-detail child object of an Asset.</description>
    <label>Transaction</label>
    <nameField>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>