InsuranceOrg/force-app/main/default/objects/vlocity_ins__AssetTransaction__c/fields/GLEntry__c.field-meta.xml
<CustomField>
    <fullName>GLEntry__c</fullName>
    <externalId>true</externalId>
    <label>GLEntry</label>
    <length>100</length>
    <type>Text</type>
</CustomField>