InsuranceOrg/force-app/main/default/objects/vlocity_ins__AssetTransaction__c/fields/PaymentNonce__c.field-meta.xml
<CustomField>
    <fullName>PaymentNonce__c</fullName>
    <externalId>true</externalId>
    <label>PaymentNonce</label>
    <length>100</length>
    <type>Text</type>
</CustomField>