InsuranceOrg/force-app/main/default/objects/vlocity_ins__AssetTransaction__c/fields/vlocity_ins__AssetId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__AssetId__c</fullName>
    <label>Held Product</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>AssetTransactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>