InsuranceOrg/force-app/main/default/objects/vlocity_ins__AssetTransaction__c/fields/vlocity_ins__FeeAmount__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__FeeAmount__c</fullName>
    <description>Prorated fee amount for transaction.</description>
    <label>Fee Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>