InsuranceOrg/force-app/main/default/objects/vlocity_ins__AssetTransaction__c/fields/vlocity_ins__StatementId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__StatementId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Statement Id</label>
    <referenceTo>vlocity_ins__Statement__c</referenceTo>
    <relationshipLabel>Statement Line Item</relationshipLabel>
    <relationshipName>Statement</relationshipName>
    <type>Lookup</type>
</CustomField>