InsuranceOrg/force-app/main/default/objects/vlocity_ins__AssetTransaction__c/fields/vlocity_ins__TransactionId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__TransactionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transaction Id</label>
    <referenceTo>vlocity_ins__AssetTransaction__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>PaymentTransaction</relationshipName>
    <type>Lookup</type>
</CustomField>