InsuranceOrg/force-app/main/default/objects/vlocity_ins__AssetTransaction__c/fields/vlocity_ins__TransactionNumber__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__TransactionNumber__c</fullName>
    <description>Identifier of this transaction in systems of record.</description>
    <externalId>true</externalId>
    <label>Transaction Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>